--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,10 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "laravel-zero/framework": "^9.2",
-        "nunomaduro/termwind": "^1.14"
+        "nunomaduro/termwind": "^1.14",
+        "spatie/temporary-directory": "^2.1"
     },
     "require-dev": {
         "laravel/pint": "^1.2",
@@ -47,5 +48,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "bin": ["application"]
+    "bin": ["pss"]
 }
