--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,15 @@ env:
 
 
 jobs:
-  build:
+  build-and-push-image:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - dockerfile: ./bin/barcode-scanner/Dockerfile
+            image: ghcr.io/p-inz/CLI-pdf-scan-splitter-docker-barcode-scanner
+          - dockerfile: ./bin/pdf-page-extractor/Dockerfile
+            image: ghcr.io/p-inz/CLI-pdf-scan-splitter-docker-pdf-page-extractor
 
     runs-on: ubuntu-latest
     permissions:
@@ -60,7 +68,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ matrix.image }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -69,6 +77,7 @@ jobs:
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
           context: .
+          file: ${{ matrix.dockerfile }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
