--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,7 +8,7 @@ on:
     tags: [ 'v*.*.*', 'v*.*', 'v*' ]
   pull_request:
     branches: [ master ]
-    
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -40,19 +40,19 @@ jobs:
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
-    
+
     - name: Get the tag name
       if:   startsWith(github.ref, 'refs/tags/')
       run:  echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
     - name: Build PHAR archive
       if:   startsWith(github.ref, 'refs/tags/')
-      run: php your-app-name app:build --build-version=${{ env.TAG }}
+      run: php pss app:build --build-version=${{ env.TAG }}
 
     - name: Build PHAR archive
       if:   ${{ !startsWith(github.ref, 'refs/tags/') }}
-      run: php your-app-name app:build --build-version=master
-      
+      run: php pss app:build --build-version=master
+
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.4
       with:
