--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "laravel-zero/laravel-zero",
-    "description": "The Laravel Zero Framework.",
-    "keywords": ["framework", "laravel", "laravel zero", "console", "cli"],
-    "homepage": "https://laravel-zero.com",
+    "name": "kduma/pdf-scan-splitter-tool",
+    "description": "Scanned PDF files splitter and sorter based on barcode",
+    "keywords": ["pdf", "barcode", "sorter", "cli"],
+    "homepage": "https://github.com/kduma-OSS/CLI-pdf-scan-splitter",
     "type": "project",
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/laravel-zero/laravel-zero/issues",
-        "source": "https://github.com/laravel-zero/laravel-zero"
+        "issues": "https://github.com/kduma-OSS/CLI-pdf-scan-splitter/issues",
+        "source": "https://github.com/kduma-OSS/CLI-pdf-scan-splitter"
     },
     "authors": [
         {
-            "name": "Nuno Maduro",
-            "email": "enunomaduro@gmail.com"
+            "name": "Krystian Duma",
+            "email": "git@krystian.duma.sh"
         }
     ],
     "require": {
