--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -68,4 +68,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       if:   startsWith(github.ref, 'refs/tags/')
       with:
-        files: builds/pss
+        files: builds/pss.phar
