--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Build PHAR archive
       if:   ${{ !startsWith(github.ref, 'refs/tags/') }}
-      run: php pss app:build --build-version=$(git rev-parse --short "$GITHUB_SHA")
+      run: php pss app:build --env=development --build-version=$(git rev-parse --short "$GITHUB_SHA")
 
     - name: Rename phar
       run: mv builds/pss builds/pss.phar
