--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Build PHAR archive
       if:   startsWith(github.ref, 'refs/tags/')
-      run: php pss app:build --build-version=${{ env.TAG }}
+      run: php pss app:build --env=development --build-version=${{ env.TAG }}
 
     - name: Build PHAR archive
       if:   ${{ !startsWith(github.ref, 'refs/tags/') }}
